# refined-index

./: .claudeignore  .gitattributes  .gitignore  ARCHITECTURE.md  BLUEPRINT.md  CHANGELOG.md  COMPREHENSIVE_GUIDE.md  COPILOT_REVIEW.md  FILLED_REFINED_INDEX.md  L5a1_debug.aux  L5a1_debug.fdb_latexmk  L5a1_debug.fls  L5a1_debug.tex  ManifoldIndex.spec  ManifoldIndex_win.spec  README.md  REFINED_INDEX_AND_DEHN_FILLING.md  SPEC.md  SPEC_NEW.md  STATUS.md  build_app.bat  build_app.sh  build_app_v2.sh  check_symmetry.py  debug_32_surgery.py  debug_basis_compare.py  debug_ell2.py  debug_eta_coeffs.py  debug_eta_convergence.py  debug_inflated_qq.py  debug_is_chain_kernel.py  debug_is_chain_kernel2.py  debug_is_kernel.py  debug_is_vs_ordinary.py  debug_m035.py  debug_m035_2.py  debug_m035_profile.py  debug_m035_scale.py  debug_nc_cycles.py  debug_nc_diag.py  (+33 more)
.claude/: settings.json
assets/: ManifoldIndex.icns
docs/: guide.html  index.html  report_mockup_m022.tex  workflow_diagram.tex
results/: 5_1^2_index.fdb_latexmk  5_1^2_index.fls  5_1^2_index.json  5_1^2_index.nb  5_1^2_index.tex  5_1^2_index.txt  5_1^2_index_report.aux  5_1^2_index_report.fdb_latexmk  5_1^2_index_report.fls  5_1^2_index_report.out  5_1^2_index_report.tex  5_1^2_index_report.toc  5_2_index.json  5_2_index.nb  5_2_index.tex  5_2_index.txt  5_2_index_report.aux  5_2_index_report.fdb_latexmk  5_2_index_report.fls  5_2_index_report.out  (+23 more)
v0.5/: ManifoldIndex.spec  ManifoldIndex_win.spec  WINDOWS_BUILD.md  build_app.bat  build_app.sh  launcher.py  pyproject.toml  setup.py  test_ci_local.bat
v0.5/assets/: ManifoldIndex.icns
v0.5/src/manifold_index/: __init__.py
v0.5/src/manifold_index/app/: __main__.py  window.py
v0.5/src/manifold_index/app/datahub/: download_tab.py  export_tab.py  generate_tab.py
v0.5/src/manifold_index/app/pipeline/: __init__.py  export_card.py  filling_card.py  index_card.py  manifold_card.py  pipeline_view.py
v0.5/src/manifold_index/app/theme/: __init__.py  colors.py  style.py
v0.5/src/manifold_index/app/widgets/: advisory_banner.py  collapsible_card.py  katex_assets.py  math_label.py  math_view.py  progress_card.py  series_table.py  slope_input.py
v0.5/src/manifold_index/app/workers/: __init__.py  fill_result_types.py  fill_worker.py  generate_worker.py  index_worker.py  load_worker.py  manifold_load_worker.py  nc_search_worker.py  weyl_worker.py
v0.5/src/manifold_index/core/: index_3d.py  kernel_cache.py  refined_dehn_filling.py  refined_index.py  weyl_check.py
v0.5/src/manifold_index/core/_c_kernel/: _c_tet_index.py
v0.5/src/manifold_index/formatters/: filling_fmt.py  filling_fmt_v2.py  index_fmt.py  manifold_fmt.py  weyl_fmt.py
v0.5/src/manifold_index/services/: compute_service.py  datahub_service.py  export_service.py  filling_service.py  session.py  session_store.py
v0.5/src/manifold_index/utils/: exporters.py
v0.5/src/manifold_index/viewmodels/: advisory.py  filling_vm.py  index_vm.py  manifold_vm.py
v0.5/tests/: test_compute_service.py  test_filling_service.py  test_formatters.py  test_session.py
(+216 files in other folders)
