[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refined-index-calculator"
version = "0.5.3"
description = "Refined Index Calculator — 3-manifold refined index, Dehn filling, and NC cycle analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "snappy",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
gui = ["PySide6"]
dev = ["pytest", "pytest-cov", "pytest-timeout", "ruff", "mypy"]

[project.scripts]
refined-index = "manifold_index.app:launch_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
manifold_index = [
    "data/kernel_cache/*.pkl.gz",
    "data/data_packs.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
